# pet-help

./: .env  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  dump_fixtures.py  load_fixtures.py  pyproject.toml  wsgi.py
fixtures/: fixtures.yml  personalinfo.json  pet.json  questionnaire.json  species.json  user.json
migrations/: alembic.ini
migrations/versions/: 00d929031ee2_spiesies_added.py  0afa754e1c5f_questionnaire_added.py  1ec946d2f02a_.py  369f068d1c41_.py  81f2a88ea8f7_.py  9afb7dad6f92_.py  9bd2af46bee5_.py  a4b08d979c88_.py  c80292e1ff3b_initial_migration.py  d30ddce7b726_.py
src/: __init__.py  routes.py
src/crud/: __init__.py  adoption.py  user.py
src/models/: __init__.py  pets.py  questionnaire.py  user.py
src/resources/: adoption.py  index.py  user.py
src/static/css/: index.css
src/templates/: base.html  base_nav_and_footer.html  footer.html  index.html  login.html  nav.html  register.html
src/templates/admin/: index.html
src/templates/adoption/: adoption.html  card.html  card_page.html  give_a_shelter.html  modal_card.html  questionnaire.html  thank_you.html
src/templates/adoption/htmx/: breed_filter.html  empty_breed_filter.html  pet_cards.html  pet_filter.html  shelter_form.html  submit_button.html
src/templates/information/: about_us.html  how_to_help.html  our_team.html
src/templates/user/: login.html  personal_info.html  profile.html  register.html
src/templates/user/htmx/: button.html  submit_button.html
src/utils/: __init__.py  utils.py
src/utils/validation/: validation.py
(+8 files in other folders)
